final work on auth
